fixed overflow from home page wrapper

--- a/Client/src/app/Pages/admin-home/admin-home.component.scss
+++ b/Client/src/app/Pages/admin-home/admin-home.component.scss
@@ -54,6 +54,7 @@ section.admin-section{
 .page-wrapper{
     flex:1;
     display:flex;
+    overflow:hidden;
 
     .sidebar-wrapper{
         width: 250px;
